--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,go
 
 ### Books Directory ###
-/**/*.json
+**/*.json
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
